@@ -7,6 +7,7 @@ Version 0.2.5
 
 	Bugfixes
 	- fixed crash on vr session end with oxrtk present
+	- fixed bug during physical tracker fallback initialization
 	
 Version 0.2.4
 
